[package]
name = "timed-text-wasm"
version = "0.0.1"
authors = ["Marc-Antoine Arnaud <arnaud.marcantoine@gmail.com>"]
description = "library to manage subtitles file in web apps"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[features]
default-features = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
cfg-if = "0.1.2"
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.1", optional = true }